# torrentbd-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  b.py  c.py  pyproject.toml  v3re.py
old/: c.py
src/torrentbd_api/: api.py  login.py  main.py  profile.py  search.py
src/torrentbd_api/static/: index.html
src/torrentbd_api/static/css/: styles.css
src/torrentbd_api/static/js/: script.js
